--- a/app/views/advertisements/show_blocks/_abuse.html.slim
+++ b/app/views/advertisements/show_blocks/_abuse.html.slim
@@ -1,4 +1,4 @@
-a.btn.btn-default.btn-xs.abuse_popover_action data-adv_id=@adv.id href="#" data-placement="top" data-toggle="tooltip" type="button" title= "Пожалуйста, поддерживайте чистоту базы!"
+a.btn.btn-default.btn-xs.abuse_popover_action yaparam="abuse_open" data-adv_id=@adv.id href="#" data-placement="top" data-toggle="tooltip" type="button" title= "Пожалуйста, поддерживайте чистоту базы!"
   i.fa.fa-ban
   '
   | пожаловаться
@@ -25,5 +25,5 @@ a.btn.btn-default.btn-xs.abuse_popover_action data-adv_id=@adv.id href="#" data-
           | абонент недоступен
     .form-group
       textarea.form-control name="abuse[comment]" placeholder="Описание" rows="3"
-    = f.button class: 'btn btn-default', type: 'submit', name: 'button'
+    = f.button class: 'btn btn-default yaSend', yaparam: 'abuse_send', type: 'submit', name: 'button'
       i.fa.fa-magic Очистить базу!
