--- a/app/views/advertisements/show_blocks/_social_btns.html.slim
+++ b/app/views/advertisements/show_blocks/_social_btns.html.slim
@@ -1,19 +1,19 @@
 noindex
-  a.btn.btn-primary.btn-xs rel="nofollow" href="http://twitter.com/share?url=#{advertisement_url(@adv)}-#{@adv.url}&text=#{@adv.comment}&via=multilisting.su"
+  a.btn.btn-primary.btn-xs.yaSend rel="nofollow" yaparam="twi_share" href="http://twitter.com/share?url=#{advertisement_url(@adv)}-#{@adv.url}&text=#{@adv.comment}&via=multilisting.su"
     '
     i.fa.fa-twitter.fa-lg.tw
   '
-  a.btn.btn-primary.btn-xs rel="nofollow" href="http://vk.com/share.php?url=#{advertisement_url(@adv)}-#{@adv.url}&title=#{@adv.title}&description=#{@adv.comment}&image=#{@photos.first.present? ? @photos.first.advertisement_photo(:thumb) : ''}"
+  a.btn.btn-primary.btn-xs.yaSend yaparam="vk_share" rel="nofollow" href="http://vk.com/share.php?url=#{advertisement_url(@adv)}-#{@adv.url}&title=#{@adv.title}&description=#{@adv.comment}&image=#{@photos.first.present? ? @photos.first.advertisement_photo(:thumb) : ''}"
     '
     i.fa.fa-vk.fa-lg.vk
   '
-  a.btn.btn-primary.btn-xs rel="nofollow" href="http://www.facebook.com/plugins/like.php?href=#{advertisement_url(@adv)}-#{@adv.url}"
+  a.btn.btn-primary.btn-xs.yaSend yaparam="fb_share" rel="nofollow" href="http://www.facebook.com/plugins/like.php?href=#{advertisement_url(@adv)}-#{@adv.url}"
     '
     i.fa.fa-facebook.fa-lg
   '
-  a.btn.btn-primary.btn-xs rel="nofollow" href="http://www.ok.ru/dk?st.cmd=addShare&st.s=1&st._surl=#{advertisement_url(@adv)}-#{@adv.url}&st.comments=#{@adv.comment}"
+  a.btn.btn-primary.btn-xs.yaSend yaparam="ok_share" rel="nofollow" href="http://www.ok.ru/dk?st.cmd=addShare&st.s=1&st._surl=#{advertisement_url(@adv)}-#{@adv.url}&st.comments=#{@adv.comment}"
     | ok
   '
-  a.btn.btn-primary.btn-xs rel="nofollow" href="https://plus.google.com/share?url=#{advertisement_url(@adv)}-#{@adv.url}"
+  a.btn.btn-primary.btn-xs.yaSend yaparam="gp_share" rel="nofollow" href="https://plus.google.com/share?url=#{advertisement_url(@adv)}-#{@adv.url}"
     '
     i.fa.fa-lg.fa-google-plus
