twitter in the footer

--- a/app/views/shared/_footer.html.slim
+++ b/app/views/shared/_footer.html.slim
@@ -17,6 +17,11 @@ hr
             i.fa.fa-envelope-o
               '
               |info@multilisting.su
+        li
+          a href="https://twitter.com/multilistingsu"
+            i.fa.fa-twitter
+              '
+              |multilistingsu
     .col-sm-2
       javascript:
         document.write("<a href='//www.liveinternet.ru/click' " +
