photos listing yametrika

--- a/app/views/advertisements/show_blocks/_photos.html.slim
+++ b/app/views/advertisements/show_blocks/_photos.html.slim
@@ -6,9 +6,9 @@
           - @photos.each do |photo|
             li
               img alt="" height="400" src=('http://multilisting.su/' + photo.advertisement_photo(:medium)) width="600"
-      a.prev.prev-stage href="#"
+      a.prev.prev-stage.yaSend yaparams="gal_photo_stage" href="#"
         span ‹
-      a.next.next-stage href="#"
+      a.next.next-stage.yaSend yaparams="gal_photo_stage" href="#"
         span ›
     .navigation-cont
       .navigation
