--- a/app/views/advertisements/show_blocks/_abuse.html.slim
+++ b/app/views/advertisements/show_blocks/_abuse.html.slim
@@ -1,4 +1,4 @@
-a.btn.btn-default.btn-xs.abuse_popover_action yaparam="abuse_open" data-adv_id=@adv.id href="#" data-placement="top" data-toggle="tooltip" type="button" title= "Пожалуйста, поддерживайте чистоту базы!"
+a.btn.btn-default.btn-xs.abuse_popover_action.yaSend yaparam="abuse_open" data-adv_id=@adv.id href="#" data-placement="top" data-toggle="tooltip" type="button" title= "Пожалуйста, поддерживайте чистоту базы!"
   i.fa.fa-ban
   '
   | пожаловаться
