--- a/app/views/advertisements/_search_results.html.slim
+++ b/app/views/advertisements/_search_results.html.slim
@@ -63,7 +63,7 @@
               '
               = adv.name
             '
-            span.btn.btn-default.btn-xs.HideAdvPhone
+            span.btn.btn-default.btn-xs.HideAdvPhone data-n=adv.id
               = adv.phone
 
 - else
