--- a/app/views/advertisements/show_blocks/_user_phone.html.slim
+++ b/app/views/advertisements/show_blocks/_user_phone.html.slim
@@ -10,7 +10,7 @@
   '
 = @adv.name
 '
-span.btn.btn-success.btn-xs.HideAdvPhone
+span.btn.btn-success.btn-xs.HideAdvPhone data-n=@adv.id
   = @adv.phone
   '
 
