--- a/app/views/advertisements/_attributes_place.html.slim
+++ b/app/views/advertisements/_attributes_place.html.slim
@@ -1,4 +1,4 @@
-legend Подробно
+legend Параметры
 .form.form-horizontal role="form"
   .attributes
     =  render '/advertisements/attributes', f: f
