--- a/app/views/advertisements/_locations.html.slim
+++ b/app/views/advertisements/_locations.html.slim
@@ -4,15 +4,23 @@ legend Местоположение
     label.col-sm-3.control-label
       i.fa.fa-map-marker.fa-lg
       '
-      | место
+      | выберите
     .col-sm-9.form.inline-block
+      .location-cont
         .form-group.location-group.btn-group multi='true' editable='true' state="#{@location_state}"
           .btn.btn-default.GetChildren.dropdown-toggle lid=0 data-toggle="dropdown"
             | Место
             '
             i.caret
+      .span.help-block.small
+        | Указывайте как можно детальней. Можно указать несколько подходящих местоположений.
+
   .form-group
     = render_input :landmark,  nil, f.object.landmark , nil
 
+  .form-group
+    label.control-label.col-sm-3 for="appendedtext"  На карте
+    .col-sm-7
+      .map#map data-latitude=@adv.latitude data-longitude=@adv.longitude data-editable='true' data-zoom=@adv.zoom
 
 .last-selected-location
