--- a/app/views/advertisements/_popover_select_location.html.slim
+++ b/app/views/advertisements/_popover_select_location.html.slim
@@ -9,7 +9,7 @@
         label
           i.fa.fa-search
         '
-        input.autocomplete-search-location parent_id="#{@location.id}" multiple=true placeholder=" найти по названию"
+        input.autocomplete-search-location parent_id="#{@location.id}" multiple=true placeholder=" введите первые буквы"
   .row
     '
 - else
