Abuse popover width fix, submit btn fix, active btn fix.

--- a/app/assets/stylesheets/advertisement.css.scss
+++ b/app/assets/stylesheets/advertisement.css.scss
@@ -72,3 +72,9 @@
   margin-left: -10px;
 }
 
+.popover.popover-medium {
+  min-width: 150px;
+  max-width: 350px;
+  width: 250px;
+}
+.popover-medium .popover-title { display: none; }
