--- a/app/views/advertisements/show_blocks/_abuse.html.slim
+++ b/app/views/advertisements/show_blocks/_abuse.html.slim
@@ -1,4 +1,4 @@
-a.btn.btn-default.btn-xs.abuse_popover_action.yaSend yaparam="abuse_open" data-adv_id=@adv.id href="#" data-placement="top" data-toggle="tooltip" type="button" title= "Пожалуйста, поддерживайте чистоту базы!"
+a.btn.btn-default.btn-xs.abuse_popover_action.yaSend yaparam="abuse_open" data-adv_id=@adv.id href="#" type="button"
   i.fa.fa-ban
   '
   | пожаловаться
@@ -26,4 +26,6 @@ a.btn.btn-default.btn-xs.abuse_popover_action.yaSend yaparam="abuse_open" data-a
     .form-group
       textarea.form-control name="abuse[comment]" placeholder="Описание" rows="3"
     = f.button class: 'btn btn-default yaSend', yaparam: 'abuse_send', type: 'submit', name: 'button'
-      i.fa.fa-magic Очистить базу!
+      i.fa.fa-magic
+      '
+      |очистить базу
