--- a/app/views/advertisements/_locations.html.slim
+++ b/app/views/advertisements/_locations.html.slim
@@ -13,7 +13,7 @@ legend Местоположение
             '
             i.caret
       .span.help-block.small
-        | Указывайте как можно больше детальней. Можно указать несколько подходящих местоположений.
+        | Указывайте как можно больше деталей. Можно указать несколько подходящих местоположений.
 
   .form-group
     = render_input :landmark,  nil, f.object.landmark , nil
