--- a/app/views/devise/registrations/_fields.html.slim
+++ b/app/views/devise/registrations/_fields.html.slim
@@ -30,8 +30,9 @@
             i.fa.fa-minus
           = f.link_to_add :phones, :data => { :target => "#reg-phones" }, class: 'btn btn-default add-phone-number hidden' do
             i.fa.fa-plus
+
 - if additional_params
-  - if f.object.new_record? && !can?(:create_from_admin, f.object)
+  - if (f.object.new_record? && !can?(:create_from_admin, f.object))
     .form-group
       label.control-label.col-sm-3
         i.fa.fa-envelope-o
