--- a/app/views/devise/registrations/edit.html.slim
+++ b/app/views/devise/registrations/edit.html.slim
@@ -1,9 +1,10 @@
 h2= "Настройки учетной записи"
 .well
-  = nested_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { class: 'form-horizontal'}) do |f|
+  = nested_form_for(resource, as: resource_name, url: registration_path(resource_name), method: :patch, html: { class: 'form-horizontal'}) do |f|
     = devise_error_messages!
     fieldset
-      = render 'devise/registrations/fields', f: f, additional_params: true, check_phone: false
+      = render 'devise/registrations/edit_fields', f: f, check_phone: true
+
       .form-group
         .col-sm-4.col-sm-offset-4
           .form-group
