--- a/app/views/advertisements/_locations.html.slim
+++ b/app/views/advertisements/_locations.html.slim
@@ -1,15 +1,14 @@
-legend Местоположение
 .form.form-horizontal role="form"
   .form-group
     label.col-sm-3.control-label
       i.fa.fa-map-marker.fa-lg
       '
-      | выберите
-    .col-sm-9.form.inline-block
+      | местоположение
+    .col-sm-9.form.inline-block.zero-left
       .location-cont
         .form-group.location-group.btn-group multi='true' editable='true' state="#{@location_state}"
           .btn.btn-default.GetChildren.dropdown-toggle lid=0 data-toggle="dropdown"
-            | Место
+            | нажмите чтобы выбрать
             '
             i.caret
       .span.help-block.small
@@ -19,8 +18,8 @@ legend Местоположение
     = render_input :landmark,  nil, f.object.landmark , nil
 
   .form-group
-    label.control-label.col-sm-3 for="appendedtext"  На карте
-    .col-sm-7
+    label.control-label.col-sm-3 for="appendedtext" на карте
+    .col-sm-7.zero-left
       .map#map data-latitude=@adv.latitude data-longitude=@adv.longitude data-editable='true' data-zoom=@adv.zoom
 
 .last-selected-location
