--- a/app/views/advertisements/_photos.html.erb
+++ b/app/views/advertisements/_photos.html.erb
@@ -1,5 +1,3 @@
-<legend>Фото</legend>
-
 <div class="fileupload_context">
 
     <span class="btn btn-success fileinput-button">
@@ -93,9 +91,9 @@
         <td colspan="2"></td>
         {% } %}
       <td class="delete">
-        <button class="btn btn-danger" data-type="{%=file.delete_type%}" data-url="{%=file.delete_url%}">
-          <i class="icon-trash icon-white"></i>
-          <span>Удалить</span>
+        <button class="btn" data-type="{%=file.delete_type%}" data-url="{%=file.delete_url%}">
+          <i class="fa fa-times"></i>
+          <span>Убрать</span>
         </button>
       </td>
     </tr>
