--- a/app/views/advertisements/_popover_locations.html.slim
+++ b/app/views/advertisements/_popover_locations.html.slim
@@ -2,6 +2,22 @@
   - @locations.each_value do |value|
     legend
       = t("activerecord.attributes.location.#{value.first[:location_type]}")
+    - if value.first[:location_type] == 'address'
+      .search-or-create-street-container-action.hidden
+        .top-buffer
+          .col-md-12
+            .form-group
+              label
+                i.fa.fa-search
+                '
+                | поиск
+              '
+              = text_field_tag 'location[title]', nil, class: 'search-or-create-street-action', placeholder: ' найти по названию', autocomplete: 'off'
+              - if can?(:manage, Location)
+                = hidden_field_tag 'location[location_type]', :address
+                = hidden_field_tag 'location[location_id]', @location.id
+                '
+                = button_tag 'Добавить новый адрес', class: 'hidden create-street-action'
     .row.top-buffer
       .col-md-12
         .empty-search-container-action.hidden
@@ -26,19 +42,5 @@
       | Ничего не найдено
 
 
-- if @location.present? && @location.street? && can?(:manage, Location)
-  .search-or-create-street-container-action.hidden
-    legend
-      | поиск
-    .top-buffer
-      .col-md-12
-        .form-group
-          label
-            i.fa.fa-search
-          '
-          = text_field_tag 'location[title]', nil, class: 'search-or-create-street-action', placeholder: ' найти по названию', autocomplete: 'off'
-          = hidden_field_tag 'location[location_type]', :address
-          = hidden_field_tag 'location[location_id]',  @location.id
-          '
-          = button_tag 'Добавить новый адрес', class: 'hidden create-street-action'
+
 
