--- a/app/views/shared/_footer.html.slim
+++ b/app/views/shared/_footer.html.slim
@@ -22,6 +22,11 @@ hr
             i.fa.fa-twitter
               '
               |multilistingsu
+        li
+          a href="https://vk.com/multilisting"
+            i.fa.fa-vk
+              '
+              |multilistingsu
     .col-sm-2
       javascript:
         document.write("<a href='//www.liveinternet.ru/click' " +
