--- a/app/views/advertisements/_form.html.slim
+++ b/app/views/advertisements/_form.html.slim
@@ -15,52 +15,28 @@ h1
     = f.hidden_field :zoom, class: 'zoom-value'
     = render '/advertisements/user', f: f
     .adv-params
-      legend Раздел
       .form.form-horizontal role="form"
         .form-group
-          label.col-sm-3.control-label for="offer_type" Вид сделки
-          .col-sm-9
-            label.control-label
-              i.fa.fa-share.fa-lg
-              '
-              | предложение
-            '
-            .btn-group.btn-group data-toggle="buttons"
-              - [:sale, :for_rent, :day].each do |offer|
-                label.btn.btn-default.AdvProperty hid="offer" multi="one" value="#{AdvEnums::OFFER_TYPES.index(offer)}" class="#{@adv.offer_type.to_s == offer.to_s  ? 'active' : ''}"
-                  = f.radio_button :offer_type, "#{offer}"
-                  = t("advertisement.offer.#{offer}")
-            '
-            label.control-label
-              i.fa.fa-reply.fa-lg
-              '
-              | спрос
-            '
-            .btn-group.btn-group data-toggle="buttons"
-              - [:buy, :rent].each do |offer|
-                label.btn.btn-default.AdvProperty hid="offer" multi="one" value="#{AdvEnums::OFFER_TYPES.index(offer)}" class="#{@adv.offer_type.to_s == offer.to_s  ? 'active' : ''}"
-                  = f.radio_button :offer_type, "#{offer}"
-                  = t("advertisement.offer.#{offer}")
+          label.col-sm-3.control-label for="offer_type" вид сделки
+          .btn-group.btn-group data-toggle="buttons"
+            - [:sale, :for_rent, :day].each do |offer|
+              label.btn.btn-default.AdvProperty hid="offer" multi="one" value="#{AdvEnums::OFFER_TYPES.index(offer)}" class="#{@adv.offer_type.to_s == offer.to_s  ? 'active' : ''}"
+                = f.radio_button :offer_type, "#{offer}"
+                = t("advertisement.offer.#{offer}")
+          .btn-group.btn-group data-toggle="buttons"
+            - [:buy, :rent].each do |offer|
+              label.btn.btn-default.AdvProperty hid="offer" multi="one" value="#{AdvEnums::OFFER_TYPES.index(offer)}" class="#{@adv.offer_type.to_s == offer.to_s  ? 'active' : ''}"
+                = f.radio_button :offer_type, "#{offer}"
+                = t("advertisement.offer.#{offer}")
         .form-group
-          label.col-sm-3.control-label for="category" Тип недвижимости
-          .col-sm-9
-            label.control-label
-              i.fa.fa-building
-              '
-              | жилая
-            '
-            .btn-group.btn-group data-toggle="buttons"
-              - [:flat, :newbuild, :house, :ijs, :hotel, :room, :garage].each do |category|
-                label.btn.btn-default.AdvProperty hid="category" multi="one" value="#{AdvEnums::CATEGORIES.index(category)}" class="#{@adv.category.to_s == category.to_s  ? 'active' : ''}"
-                  = f.radio_button :category,  "#{category}"
-                  = t "advertisement.category.#{category}"
+          label.col-sm-3.control-label for="category" тип недвижимости
+          .btn-group.btn-group data-toggle="buttons"
+            - [:flat, :newbuild, :house, :ijs, :hotel, :room, :garage].each do |category|
+              label.btn.btn-default.AdvProperty hid="category" multi="one" value="#{AdvEnums::CATEGORIES.index(category)}" class="#{@adv.category.to_s == category.to_s  ? 'active' : ''}"
+                = f.radio_button :category,  "#{category}"
+                = t "advertisement.category.#{category}"
 
-          .col-sm-9.col-sm-offset-3
-            label.control-label
-              i.fa.fa-briefcase
-              '
-              | коммерческая
-            '
+          .col-sm-offset-3
             .btn-group.btn-group data-toggle="buttons"
               - [:office, :trade, :storage, :cafe, :land].each do |category|
                 label.btn.btn-default.AdvProperty hid="category" multi="one" value="#{AdvEnums::CATEGORIES.index(category)}" class="#{@adv.category.to_s == category.to_s  ? 'active' : ''}"
