--- a/app/views/advertisements/inputs/_boolean.html.slim
+++ b/app/views/advertisements/inputs/_boolean.html.slim
@@ -1,6 +1,6 @@
 = label_tag name_from, t("advertisement.attributes.#{name_from}"), class:'col-sm-3 control-label'
 .controls
-  .col-sm-2
+  .col-sm-2.zero-left
     .checkbox
       label
         = check_box_tag("advertisement[#{name_from}]", 1, value_from)
