--- a/app/views/advertisements/inputs/_price.html.slim
+++ b/app/views/advertisements/inputs/_price.html.slim
@@ -1,9 +1,9 @@
 = label_tag name_from, t("advertisement.attributes.#{name_from}"), class:'col-sm-3 control-label'
 .controls
-  .col-sm-2
-    = text_field_tag("advertisement[#{name_from}]", value_from, class: 'form-control text-right', autocomplete: 'off', type: 'text', placeholder: 0, required:AdvValidation::PRESENCE_FIELDS.include?(name_from))
+  .col-sm-2.zero-left
+    = text_field_tag("advertisement[#{name_from}]", value_from, class: 'form-control text-right', autocomplete: 'off', type: 'text', required:AdvValidation::PRESENCE_FIELDS.include?(name_from))
   - if name_to.present?
-    .col-sm-2
-      = text_field_tag("advertisement[#{name_to}]", value_to, class: 'form-control text-right', autocomplete: 'off', type: 'text',  placeholder: 0,  required:AdvValidation::PRESENCE_FIELDS.include?(name_to))
+    .col-sm-2.zero-left
+      = text_field_tag("advertisement[#{name_to}]", value_to, class: 'form-control text-right', autocomplete: 'off', type: 'text', required:AdvValidation::PRESENCE_FIELDS.include?(name_to))
   label.control-label
     i.fa.fa-rouble.fa-lg
