--- a/app/views/advertisements/show.html.slim
+++ b/app/views/advertisements/show.html.slim
@@ -17,14 +17,6 @@ h1
 .well.well-sm.clearfix
   .row
     .col-md-9.col-lg-7
-
-      /.clearfix style="margin-bottom: 15px"
-      /  = image_tag @photos.first.advertisement_photo(:medium), class: 'first_photo_img_action img-responsive search-photo-size', style: "height: 400px;"
-      /  p.text-center.first_photo_comment_action
-      /    = @photos.first.comment
-      /  - @photos.each do |photo|
-      /    a.show_photo_action href="#" full_scr=photo.advertisement_photo(:medium) comment=photo.comment
-      /      = image_tag photo.advertisement_photo(:thumb), class: 'col-xs-2 thumbnail'
       p
         span.small.text-muted
           - if @adv.created_at >= @adv.updated_at
@@ -53,11 +45,18 @@ h1
           '
           strong
             = @today_counter.count
-        =render 'advertisements/show_blocks/photos'
-        =render 'advertisements/show_blocks/small_breadcrumbs'
-        - if @adv.comment.present?
-          br
-          = @adv.comment
+          '
+          /a.btn.btn-default.btn-xs
+          /  i.fa.fa-star-o
+          /  '
+          /  | в избранное
+          /'
+          = render 'advertisements/show_blocks/social_btns'
+      =render 'advertisements/show_blocks/photos'
+      =render 'advertisements/show_blocks/small_breadcrumbs'
+      - if @adv.comment.present?
+        br
+        = @adv.comment
 
 
       - if @grouped_allowed_attributes.present?
@@ -101,30 +100,13 @@ h1
                     i.fa.fa-rouble
 
       = render 'advertisements/show_blocks/user_phone'
-
-      p
-        br
-      p
-        | cохраните объявление, чтобы легче было потом найти:
-        '
-        a.btn.btn-default.btn-xs
-          i.fa.fa-star-o
-          '
-          | в избранное
-        '
-        = render 'advertisements/show_blocks/social_btns'
-
-      p
-        /blyat!!!! nu kak tak-to!
-        div
-          | ещё можно:
-          '
-          = render 'advertisements/show_blocks/abuse'
-          = render 'advertisements/show_blocks/edit_btns'
+      '
+      | ещё можно:
+      '
+      = render 'advertisements/show_blocks/abuse'
+      = render 'advertisements/show_blocks/edit_btns'
 
     - if @adv.latitude.present? && @adv.longitude.present?
-      p
-        br
       .col-xs-12.col-lg-5
         .map#map data-latitude=@adv.latitude data-longitude=@adv.longitude data-editable='false' data-zoom=@adv.zoom
 
