--- a/app/views/advertisements/inputs/_text.html.slim
+++ b/app/views/advertisements/inputs/_text.html.slim
@@ -1,4 +1,4 @@
 = label_tag name_from, t("advertisement.attributes.#{name_from}"), class:'col-sm-3 control-label'
 .controls
   .col-sm-6.zero-left
-    = text_field_tag("advertisement[#{name_from}]", value_from, class: 'form-control', placeholder: 'перекрёсток, общественный объект и т.п.', maxlength: 70)
+    = text_field_tag("advertisement[#{name_from}]", value_from, class: 'form-control', placeholder: 'укажите перекрёсток, общественный объект и т.п.', maxlength: 70)
