--- a/app/views/devise/registrations/edit.html.slim
+++ b/app/views/devise/registrations/edit.html.slim
@@ -1,6 +1,6 @@
 h2= "Настройки учетной записи"
 .well
-  = nested_form_for(resource, as: resource_name, url: registration_path(resource_name), method: :patch, html: { class: 'form-horizontal'}) do |f|
+  = nested_form_for(resource, as: resource_name, url: registration_path(resource_name), method: :patch, html: { class: 'form-horizontal easyBootstrapValidator'}) do |f|
     = devise_error_messages!
     fieldset
       = render 'devise/registrations/edit_fields', f: f, check_phone: true
