--- a/app/views/rails_admin/main/abuses.html.slim
+++ b/app/views/rails_admin/main/abuses.html.slim
@@ -2,24 +2,56 @@ h2= t 'activerecord.attributes.abuse.class'
 
 table.table.table-bordered
   tr
-    th= t 'activerecord.attributes.abuse.created_at'
-    th= t 'activerecord.attributes.abuse.status'
-    th= t 'activerecord.attributes.abuse.abuse_type'
-    th= t 'activerecord.attributes.abuse.moderator_comment'
-    th= t 'activerecord.attributes.abuse.comment'
-    th= t 'activerecord.attributes.abuse.user'
-    th= t 'admin.table_headers.advertisements'
+    th.col-md-1= t 'activerecord.attributes.abuse.created_at'
+    th.col-md-1= t 'activerecord.attributes.abuse.status'
+    th.col-md-1= t 'activerecord.attributes.abuse.abuse_type'
+    th.col-md-1= t 'activerecord.attributes.abuse.moderator_comment'
+    th.col-md-1= t 'activerecord.attributes.abuse.comment'
+    th.col-md-1= t 'activerecord.attributes.abuse.user'
+    th.col-md-6= t 'admin.table_headers.advertisements'
     td
   - @objects.each do |abuse|
     tr
-      td= abuse.created_at
+      td
+        =abuse.created_at.strftime('%R')
+        br
+        = abuse.created_at.strftime('%m/%d/%Y')
       td= abuse.status
       td= abuse.abuse_type
       td= abuse.moderator_comment
       td= abuse.comment
-      td= abuse.user
-      td= abuse.advertisement
       td
-        = link_to 'accept', '#'
-        '
-        = link_to 'decline', '#'
+        = link_to abuse.user.name, rails_admin.show_path(model_name: :user, id: abuse.user_id)
+      td
+        -adv = abuse.advertisement
+        a href="#{rails_admin.show_path(model_name: :advertisement, id: adv.id)}"
+          /.col-lg-2.col-md-2.col-sm-3.col-xs-12
+            - if adv.preview_url.present?
+              img src=adv.preview_url alt=adv.preview_alt style="width: 145px;height: 90px;"
+            -else
+              img src="#{image_path('empty_preview.png')}" style="width: 145px;height: 90px;"
+
+          .col-lg-5.col-md-6.col-sm-9.col-xs-12
+            h4.media-heading
+              = adv.anchor
+            - if adv.price_from.present?
+              span.lead
+                span.formatRub
+                  = adv.price_from
+                - if adv.price_to.present? && adv.price_to != adv.price_from
+                  '
+                  | -
+                  '
+                  span.formatRub
+                    = adv.price_to
+                '
+                i.fa.fa-rub
+            - if adv.locations_title.present?
+              br
+                span
+                  = adv.locations_title
+
+      td
+        = link_to t('admin.actions.accept.link'), "/abuses/#{abuse.id}?status=1", method: :patch, class: 'btn btn-success'
+        br
+        = link_to t('admin.actions.decline.link'), "/abuses/#{abuse.id}?status=2", method: :patch, class: 'btn btn-danger'
