--- a/app/views/advertisements/new.html.slim
+++ b/app/views/advertisements/new.html.slim
@@ -1,1 +1,8 @@
+= content_for :title
+  - if @adv.new_record?
+    | Дать бесплатное объявление на доску недвижимости
+  - else
+    | Редактирование объявления
+
+
 = render 'advertisements/form'
