--- a/app/views/advertisements/_photos.html.erb
+++ b/app/views/advertisements/_photos.html.erb
@@ -1,37 +1,4 @@
-<div class="fileupload_context">
-
-    <span class="btn btn-success fileinput-button">
-          <i class="i fa fa-photo"></i>
-          <span>добавить фото</span>
-      <%= file_field_tag 'advertisement_photo[]', multiple: true%>
-    </span>
-    <span class="span help-block small" >
-        Оптимально выглядят горизонтально ориентированые снимки
-    </span>
-
-
-      <!-- The fileupload-buttonbar contains buttons to add/delete files and start/cancel the upload -->
-      <div class="form form-horizontal">
-        <div class="col-sm-9">
-
-
-          <!-- The global progress bar -->
-          <div class="progress progress-success progress-striped active fade">
-            <div class="bar zero-width" ></div>
-          </div>
-        </div>
-      </div>
-      <!-- The loading indicator is shown during image processing -->
-
-      <div class="fileupload-loading"></div>
-
-      <!-- The table listing the files available for upload/download -->
-      <table class="table table-striped"><tbody class="files" data-toggle="modal-gallery" data-target="#modal-gallery"></tbody>
-
-      </table>
-
-
-</div>
+<%= render 'advertisements/photos_block' %>
 
 
 <!-- The template to display files available for upload -->
@@ -61,8 +28,8 @@
     <td colspan="2"></td>
     {% } %}
     <td class="cancel">{% if (!i) { %}
-      <button class="btn btn-warning">
-        <i class="icon-ban-circle icon-white"></i>
+      <button class="btn">
+        <i class="fa fa-times"></i>
         <span>Отмена</span>
       </button>
       {% } %}</td>
