--- a/app/views/shared/_footer.html.slim
+++ b/app/views/shared/_footer.html.slim
@@ -17,62 +17,83 @@ hr
             i.fa.fa-envelope-o
               '
               |info@multilisting.su
+    .col-sm-3
+      ul.list-unstyled
+        li
+          | В соцсетях:
         li
           a href="https://twitter.com/multilistingsu"
-            i.fa.fa-twitter
-              '
-              |multilistingsu
-        li
+            i.fa.fa-twitter.fa-lg
+          '
           a href="https://vk.com/multilisting"
-            i.fa.fa-vk
-              '
-              |multilistingsu
+            i.fa.fa-vk.fa-lg
     .col-sm-2
-      javascript:
-        document.write("<a href='//www.liveinternet.ru/click' " +
-        "target=_blank><img src='//counter.yadro.ru/hit?t17.1;r" +
-        escape(document.referrer) + ((typeof(screen) == "undefined") ? "" :
-        ";s" + screen.width + "*" + screen.height + "*" + (screen.colorDepth ?
-        screen.colorDepth : screen.pixelDepth)) + ";u" + escape(document.URL) +
-        ";" + Math.random() +
-        "' alt='' title='LiveInternet: показано число просмотров за 24" +
-        " часа, посетителей за 24 часа и за сегодня' " +
-        "border='0' width='88' height='31'><\/a>");
-    .col-sm-2
-      a href="https://metrika.yandex.ru/stat/?id=28695786&amp;from=informer" rel="nofollow" target="_blank"
-        img alt="Яндекс.Метрика" onclick="try{Ya.Metrika.informer({i:this,id:28695786,lang:'ru'});return false}catch(e){}" src="//bs.yandex.ru/informer/28695786/3_0_FFFFFFFF_EFEFEFFF_0_pageviews" style="width:88px; height:31px; border:0;" title="Яндекс.Метрика: данные за сегодня (просмотры), визиты и уникальные посетители)"
-      javascript:
-        var yaParams = {
-        };
-        (function (d, w, c) {
-          (w[c] = w[c] || []).push(function () {
-            try {
-              w.yaCounter28695786 = new Ya.Metrika({
-                id: 28695786,
-                webvisor: true,
-                clickmap: true,
-                trackLinks: true,
-                accurateTrackBounce: true,
-                trackHash: true,
-                params: window.yaParams || {}
+      ul.list-unstyled
+        li
+          javascript:
+            document.write("<a href='//www.liveinternet.ru/click' " +
+            "target=_blank><img src='//counter.yadro.ru/hit?t17.1;r" +
+            escape(document.referrer) + ((typeof(screen) == "undefined") ? "" :
+            ";s" + screen.width + "*" + screen.height + "*" + (screen.colorDepth ?
+            screen.colorDepth : screen.pixelDepth)) + ";u" + escape(document.URL) +
+            ";" + Math.random() +
+            "' alt='' title='LiveInternet: показано число просмотров за 24" +
+            " часа, посетителей за 24 часа и за сегодня' " +
+            "border='0' width='88' height='31'><\/a>");
+        li
+          a href="https://metrika.yandex.ru/stat/?id=28695786&amp;from=informer" rel="nofollow" target="_blank"
+            img alt="Яндекс.Метрика" onclick="try{Ya.Metrika.informer({i:this,id:28695786,lang:'ru'});return false}catch(e){}" src="//bs.yandex.ru/informer/28695786/3_0_FFFFFFFF_EFEFEFFF_0_pageviews" style="width:88px; height:31px; border:0;" title="Яндекс.Метрика: данные за сегодня (просмотры), визиты и уникальные посетители)"
+          javascript:
+            var yaParams = {
+            };
+            (function (d, w, c) {
+              (w[c] = w[c] || []).push(function () {
+                try {
+                  w.yaCounter28695786 = new Ya.Metrika({
+                    id: 28695786,
+                    webvisor: true,
+                    clickmap: true,
+                    trackLinks: true,
+                    accurateTrackBounce: true,
+                    trackHash: true,
+                    params: window.yaParams || {}
+                  });
+                } catch (e) {
+                }
               });
-            } catch (e) {
-            }
-          });
-          var n = d.getElementsByTagName("script")[0], s = d.createElement("script"), f = function () {
-            n.parentNode.insertBefore(s, n);
-          };
-          s.type = "text/javascript";
-          s.async = true;
-          s.src = (d.location.protocol == "https:" ? "https:" : "http:") + "//mc.yandex.ru/metrika/watch.js";
-          if (w.opera == "[object Opera]") {
-            d.addEventListener("DOMContentLoaded", f, false);
-          } else {
-            f();
-          }
-        })(document, window, "yandex_metrika_callbacks");
-      noscript
-        img alt="" src="//mc.yandex.ru/watch/28695786" style=("position:absolute; left:-9999px;")
+              var n = d.getElementsByTagName("script")[0], s = d.createElement("script"), f = function () {
+                n.parentNode.insertBefore(s, n);
+              };
+              s.type = "text/javascript";
+              s.async = true;
+              s.src = (d.location.protocol == "https:" ? "https:" : "http:") + "//mc.yandex.ru/metrika/watch.js";
+              if (w.opera == "[object Opera]") {
+                d.addEventListener("DOMContentLoaded", f, false);
+              } else {
+                f();
+              }
+            })(document, window, "yandex_metrika_callbacks");
+          noscript
+            img alt="" src="//mc.yandex.ru/watch/28695786" style=("position:absolute; left:-9999px;")
+
+javascript:
+  (function (i, s, o, g, r, a, m) {
+    i['GoogleAnalyticsObject'] = r;
+    i[r] = i[r] || function () {
+      (i[r].q = i[r].q || []).push(arguments)
+    }, i[r].l = 1 * new Date();
+    a = s.createElement(o),
+            m = s.getElementsByTagName(o)[0];
+    a.async = 1;
+    a.src = g;
+    m.parentNode.insertBefore(a, m)
+  })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+
+  ga('create', 'UA-20191932-2', 'auto');
+  ga('send', 'pageview');
+- if user_signed_in?
+  javascript:
+    ga('set', 'uid', #{current_user.id});
 hr
 
 
