--- a/app/views/devise/passwords/new.html.slim
+++ b/app/views/devise/passwords/new.html.slim
@@ -3,7 +3,7 @@ h1
 = content_for :title
   | Восстановление пароля
 .well.clearfix
-  = form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post, class: 'form form-horizontal' }) do |f|
+  = form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post, class: 'form form-horizontal easyBootstrapValidator' }) do |f|
     = devise_error_messages!
     fieldset
       .form-group
