select locations btns fixes.

--- a/app/views/advertisements/_popover_select_location.html.slim
+++ b/app/views/advertisements/_popover_select_location.html.slim
@@ -1,17 +1,13 @@
 - if @location.present? && @location.city?
-  legend
-    = t("activerecord.attributes.location.street")
-  .top-buffer
+  - if @locations.present?
+    = render 'advertisements/popover_locations'
+  h4= "укажите " + t("activerecord.attributes.location.street")
+  .row
     .col-md-12
       .form-group
         label
           i.fa.fa-search
-          '
-          | поиск
         '
         input.autocomplete-search-location parent_id="#{@location.id}" multiple=true placeholder=" введите первые буквы"
-  - if @locations.present?
-    = render 'advertisements/popover_locations'
-
 - else
   = render 'advertisements/popover_locations'
