--- a/app/assets/stylesheets/advertisement.css.scss
+++ b/app/assets/stylesheets/advertisement.css.scss
@@ -75,5 +75,6 @@
   max-width: 350px;
   width: 250px;
 }
-.popover-medium .popover-title { display: none; }
-
+.popover-medium .popover-title {
+  display: none;
+}
