--- a/app/views/advertisements/_popover_locations.html.slim
+++ b/app/views/advertisements/_popover_locations.html.slim
@@ -1,22 +1,23 @@
 - if @locations.present?
   - @locations.each_value do |value|
-    h4= "укажите " + t("activerecord.attributes.location.#{value.first[:location_type]}")
+    legend
+      = t("activerecord.attributes.location.#{value.first[:location_type]}")
     - if value.first[:location_type] == 'address'
-      .search-or-create-street-container-action.hidden
-        /.top-buffer
-        .col-md-12
-          .form-group
-            label
-              i.fa.fa-search
+      .search-or-create-location-container-action.hidden
+        .top-buffer
+          .col-md-12
+            .form-group
+              label
+                i.fa.fa-search
+                '
+                | поиск
               '
-              | поиск
-            '
-            = text_field_tag 'location[title]', nil, class: 'search-or-create-street-action', placeholder: ' найти по названию', autocomplete: 'off'
-            - if can?(:manage, Location)
-              = hidden_field_tag 'location[location_type]', :address
-              = hidden_field_tag 'location[location_id]', @location.id
-              '
-              = button_tag 'Добавить новый адрес', class: 'hidden create-street-action'
+              = text_field_tag 'location[title]', nil, class: 'search-or-create-location-action', placeholder: ' найти по названию', autocomplete: 'off'
+              - if can?(:manage, Location)
+                = hidden_field_tag 'location[location_type]', :address
+                = hidden_field_tag 'location[location_id]', @location.id
+                '
+                = button_tag 'Добавить новый адрес', class: 'hidden create-location-action'
     .row.top-buffer
       .col-md-12
         .empty-search-container-action.hidden
@@ -26,18 +27,19 @@
             .location-button name="#{location[:location_type]}" has_children="#{location[:has_children]}" lid="#{location[:id]}" class="button btn btn-default SelectLocation"
               = location[:title]
 - elsif @location.present? && @location.street? && can?(:manage, Location)
-  h4= "укажите " + t("activerecord.attributes.location.street")
-  /.row.top-buffer
-  .col-md-12
-    .empty-search-container-action.hidden
-      | Ничего не найдено
-    .btn-group.search-container-action data-toggle="buttons"
+  legend
+    = t("activerecord.attributes.location.street")
+  .row.top-buffer
+    .col-md-12
+      .empty-search-container-action.hidden
+        | Ничего не найдено
+      .btn-group.search-container-action data-toggle="buttons"
 - else
-  h4
+  legend
     | Раздел пуст
-  /.row.top-buffer
-  .col-md-12
-    | Ничего не найдено
+  .row.top-buffer
+    .col-md-12
+      | Ничего не найдено
 
 
 
