--- a/app/views/shared/_header.html.slim
+++ b/app/views/shared/_header.html.slim
@@ -13,11 +13,6 @@
           | multilisting.su
     .collapse.navbar-collapse
       ul.nav.navbar-nav
-        li class="#{'active' if current_page?(controller: '/advertisements', action: :new) || current_page?(controller: '/advertisements', action: :create) }"
-          = link_to new_advertisement_path
-            i.fa.fa-bullhorn.fa-lg
-            '
-            | Разместить объявление
         - if user_signed_in?
           li class="#{'active' if current_page?(controller: '/cabinet')}"
             = link_to cabinet_index_path('advertisement[expired]' => 0)
@@ -37,51 +32,52 @@
       ul.nav.navbar-nav.navbar-right
         - unless current_user.present?
           li.nav.navbar-nav
-            =link_to new_user_registration_path
+            = link_to new_user_registration_path
               .navbar-link
                 i.fa.fa-plug
                 '
                 | Зарегистрироваться
-        li.nav.navbar-nav
-          - if @current_user
-            li.dropdown.nav
-              a.dropdown-toggle data-toggle="dropdown" href="#"
-                i.fa.fa-user
-                '
-                = @current_user.email
-                i.caret
-              ul.dropdown-menu.sub-menu
-                li
-                  = link_to edit_user_registration_path() do
-                    i.fa.fa-gear.fa-spin
-                    |&nbsp
-                    | Настройки
-                /li
-                  a href="#"
-                    i.fa.fa-money
-                    | Кошелёк
-                /li.divider
-                /li
-                  a href="#"
-                    i.fa.fa-male
-                    i.fa.fa-female
-                    | Агенты
-                /li
-                  a href="#"
-                    i.fa.fa-wrench
-                    | Агентство
-                /li.divider
-                li
-                  = link_to destroy_user_session_path, method: :delete do
-                    i.fa.fa-power-off
-                    |&nbsp
-                    | Выход
-
-          - else
-            .button.btn.navbar-btn.btn-default data-toggle="modal" data-target=".sign_in_modal"
-              i.fa.fa-lock
+        - if @current_user
+          li.dropdown.nav
+            a.dropdown-toggle data-toggle="dropdown" href="#"
+              i.fa.fa-user
               '
-              | Войти
+              = @current_user.email
+              i.caret
+            ul.dropdown-menu.sub-menu
+              li
+                = link_to edit_user_registration_path() do
+                  i.fa.fa-gear.fa-spin
+                  |&nbsp
+                  | Настройки
+              /li
+                a href="#"
+                  i.fa.fa-money
+                  | Кошелёк
+              /li.divider
+              /li
+                a href="#"
+                  i.fa.fa-male
+                  i.fa.fa-female
+                  | Агенты
+              /li
+                a href="#"
+                  i.fa.fa-wrench
+                  | Агентство
+              /li.divider
+              li
+                = link_to destroy_user_session_path, method: :delete do
+                  i.fa.fa-power-off
+                  |&nbsp
+                  | Выход
+
+        - else
+          li.nav.navbar-nav
+            a data-toggle="modal" data-target=".sign_in_modal" href='javascript:void(0)'
+              .navbar-link
+                i.fa.fa-lock
+                '
+                | Войти
             .modal.sign_in_modal aria-hidden="true" aria-labelledby="Авторизация" role="dialog"
               .modal-dialog.modal-sm
                 .modal-content
@@ -107,7 +103,20 @@
                       '
                       = link_to "Забыли пароль?", new_password_path(resource_name)
 
-
+        - if current_page?(controller: '/advertisements', action: :new) || current_page?(controller: '/advertisements', action: :create)
+          li.nav.navbar-nav.active
+            = link_to new_advertisement_path
+              i.fa.fa-bullhorn.fa-lg
+              '
+              | Разместить объявление
+        - else
+          li.nav.navbar-nav
+            .navbar-btn.nav-font-color
+              = link_to new_advertisement_path
+                .btn.btn-warning
+                  i.fa.fa-bullhorn.fa-lg
+                  '
+                  |Разместить объявление
 
 
 
