--- a/app/views/advertisements/_search_form.html.slim
+++ b/app/views/advertisements/_search_form.html.slim
@@ -1,5 +1,5 @@
 .well.well-sm
-  = form_tag root_path, method: :get, class: 'form form-inline withoutBootstrapValidator', role:'form'
+  = form_tag root_path, method: :get, class: 'form form-inline withoutBootstrapValidator find-location-form', role:'form'
     /What a hell with this css??
     .row.col-xs-12.control_show_action.hidden
       .form-group
@@ -80,6 +80,7 @@
               | местоположение
               '
               i.caret
+          input type='hidden' name='advertisement[location_ids][]'
     .last-selected-location lid=""
     - if @hidden_location_sections.present?
       .row.col-xs-12.control_hide_action
