validation not working properly

--- a/app/views/advertisements/_search_form.html.slim
+++ b/app/views/advertisements/_search_form.html.slim
@@ -80,7 +80,9 @@
               | местоположение
               '
               i.caret
+          /TEST FIELD FOR VALIDATION
           input type='hidden' name='advertisement[location_ids][]'
+          /input type='text' name='advertisement[location_ids][]'
     .last-selected-location lid=""
     - if @hidden_location_sections.present?
       .row.col-xs-12.control_hide_action
