--- a/app/views/advertisements/_search_form.html.slim
+++ b/app/views/advertisements/_search_form.html.slim
@@ -80,9 +80,9 @@
               | местоположение
               '
               i.caret
-          /TEST FIELD FOR VALIDATION
-          input type='hidden' name='advertisement[location_ids][]'
-          /input type='text' name='advertisement[location_ids][]'
+            /validation only
+            /input#first-advlids type='hidden' name='advertisement[location_ids][]'
+            = hidden_field_tag 'advertisement[location_ids][]', @locations.present? ? @locations.last.id : nil, id: 'first-advlids'
     .last-selected-location lid=""
     - if @hidden_location_sections.present?
       .row.col-xs-12.control_hide_action
