Refactored validation. Needs to figured out why on other machine hidden field validation works.

--- a/app/views/advertisements/_search_form.html.slim
+++ b/app/views/advertisements/_search_form.html.slim
@@ -1,5 +1,5 @@
 .well.well-sm
-  = form_tag root_path, method: :get, class: 'form form-inline withoutBootstrapValidator search-locations-form', role:'form'
+  = form_tag root_path, method: :get, class: 'form form-inline withoutBootstrapValidator', role:'form'
     /What a hell with this css??
     .row.col-xs-12.control_show_action.hidden
       .form-group
