User sign_in, password edit etc styling.

--- a/app/assets/stylesheets/common.css.scss
+++ b/app/assets/stylesheets/common.css.scss
@@ -104,6 +104,12 @@ h2 {
   right: 50px;
 }
 
+//strange behavior in user settings
+.phone-input.form-control {
+  width: 340px;
+  margin-left: -15px;
+}
+
 
 
 
