--- a/app/views/devise/registrations/_edit_fields.html.slim
+++ b/app/views/devise/registrations/_edit_fields.html.slim
@@ -1,10 +1,12 @@
 .form-group.role-selector-validation
   label.control-label.col-sm-3 for="radios"
-  .col-sm-4
+  .col-sm-4.zero-left
     - (AdvEnums::USER_ROLES - (current_user.present? && current_user.admin? ? [] : [:admin])).each_with_index  do |role, index|
       /.col-sm-6.zero-left
       = f.label :role, class: 'radio-inline', for: "advertisement_user_attributes_role_#{role}" do
         = f.radio_button :role, role.to_sym, required: false, id: "advertisement_user_attributes_role_#{role}"
+        = render_icon(role.to_sym)
+        '
         = t "activerecord.attributes.user.roles.#{role}"
 
 .form-group
@@ -23,7 +25,7 @@
   .col-sm-4#reg-phones
     = f.fields_for :phones, (f.object.phones.presence || f.object.phones.build) do |phone_form|
       .input-group
-        = phone_form.text_field :original, class: "form-control#{check_phone ? ' checkPhone': ''}", required: true, placeholder: '+7(863) 2-12-85-06'
+        = phone_form.text_field :original, class: "form-control phone-input #{check_phone ? ' checkPhone': ''}", required: true, placeholder: '+7(863) 2-12-85-06'
         span.input-group-btn
           = phone_form.link_to_remove class: 'btn btn-default dell-phone-number ' do
             i.fa.fa-minus
