--- a/app/views/devise/shared/_links.erb
+++ b/app/views/devise/shared/_links.erb
@@ -1,9 +1,12 @@
 <%- if controller_name != 'sessions' %>
-  <%= link_to "Войти", new_session_path(resource_name) %><br />
+    <%= link_to '<i class="fa fa-sign-in"> Войти</i>'.html_safe, new_session_path(resource_name) %>
+
+    <br/>
 <% end -%>
 
 <%- if devise_mapping.registerable? && controller_name != 'registrations' %>
-  <%= link_to "Зарегистрироваться", new_registration_path(resource_name) %><br />
+    <%= link_to '<i class="fa fa-plug"> Зарегистрироваться</i>'.html_safe, new_registration_path(resource_name) %>
+    <br/>
 <% end -%>
 
 <%- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
