--- a/app/assets/stylesheets/common.css.scss
+++ b/app/assets/stylesheets/common.css.scss
@@ -104,6 +104,12 @@ h2 {
   right: 50px;
 }
 
+.form-horizontal .has-feedback .form-control-feedback[data-fv-icon-for="location_validation"]
+{
+  right: -15px;
+}
+
+
 
 
 
