--- a/app/views/advertisements/_search_results.html.slim
+++ b/app/views/advertisements/_search_results.html.slim
@@ -64,7 +64,8 @@
               = adv.name
             '
             span.btn.btn-default.btn-xs.HideAdvPhone data-n=adv.id
-              = adv.phone
+              noindex
+                = adv.phone
 
 - else
   - if params[:controller] == 'advertisements'
