--- a/app/views/advertisements/get_locations.js.erb
+++ b/app/views/advertisements/get_locations.js.erb
@@ -8,7 +8,7 @@ el.popover({
 el.find('input[type="text"]').focus();
 $('.popover:first').css('width', $('.popover').width());
 if (el.closest('.location-group').attr('editable') === 'true') {
-    $('.search-or-create-location-container-action').removeClass('hidden')
+    $('.search-or-create-location-container-action').removeClass('hidden');
 }
 //el.parent().find('.btn').removeClass('active');
 
