first version of new abuses in RA. (JS broke last version)

--- a/app/views/abuse_mailer/inform.html.slim
+++ b/app/views/abuse_mailer/inform.html.slim
@@ -3,4 +3,4 @@
 -else
   = "на ваше объявление № #{@adv} @path пожаловались по причине \"#{@comment}\" модератор #{@status} жалобу."
 
-= render 'shared/footer'
+= render 'shared/mailer_footer'
