--- a/app/views/advertisements/_form.html.slim
+++ b/app/views/advertisements/_form.html.slim
@@ -19,12 +19,12 @@ h1
         .form-group
           label.col-sm-3.control-label for="advertisement[offer_type]" вид сделки
           .col-sm-9
-            .btn-group.btn-group data-toggle="buttons"
+            .btn-group data-toggle="buttons"
               - [:sale, :for_rent, :day].each do |offer|
                 label.btn.btn-default.AdvProperty hid="offer" multi="one" value="#{AdvEnums::OFFER_TYPES.index(offer)}" class="#{@adv.offer_type.to_s == offer.to_s  ? 'active' : ''}"
                   = f.radio_button :offer_type, "#{offer}"
                   = t("advertisement.offer.#{offer}")
-            .btn-group.btn-group data-toggle="buttons"
+            .btn-group data-toggle="buttons"
               - [:buy, :rent].each do |offer|
                 label.btn.btn-default.AdvProperty hid="offer" multi="one" value="#{AdvEnums::OFFER_TYPES.index(offer)}" class="#{@adv.offer_type.to_s == offer.to_s  ? 'active' : ''}"
                   = f.radio_button :offer_type, "#{offer}"
@@ -33,13 +33,13 @@ h1
         .form-group
           label.col-sm-3.control-label for="advertisement[category]" тип недвижимости
           .col-sm-9
-            .btn-group.btn-group data-toggle="buttons"
+            .btn-group data-toggle="buttons"
               - [:flat, :newbuild, :house, :ijs, :hotel, :room, :garage].each do |category|
                 label.btn.btn-default.AdvProperty hid="category" multi="one" value="#{AdvEnums::CATEGORIES.index(category)}" class="#{@adv.category.to_s == category.to_s  ? 'active' : ''}"
                   = f.radio_button :category,  "#{category}"
                   = t "advertisement.category.#{category}"
 
-            .btn-group.btn-group data-toggle="buttons"
+            .btn-group data-toggle="buttons"
               - [:office, :trade, :storage, :cafe, :land].each do |category|
                 label.btn.btn-default.AdvProperty hid="category" multi="one" value="#{AdvEnums::CATEGORIES.index(category)}" class="#{@adv.category.to_s == category.to_s  ? 'active' : ''}"
                   = f.radio_button :category,  "#{category}"
